  * Make a few packages key for the laptop task. This allows tasksel to
    display the laptop task as installed, which it cannot do for tasks without
    any key packages. Closes: #418816
  * Add gaim-libnotify to gnome-desktop. Needs to be manually turned on but
    improves gnome integration of gaim.
  * Add avahi-autoipd to laptop task for zeroconf networking that doesn't
    get in the way.

 -- Joey Hess <joeyh@debian.org>  Tue, 17 Apr 2007 20:25:12 -0400

tasksel (2.66) unstable; urgency=medium

  * The iceweasel transition is complete, remove all firefox stuff from tasks.
  * Move iceweasel back to Key for desktop.
  * Add iceweasel-l10n-he to hebrew-desktop, iceweasel-l10n-fr to
    french-desktop, iceweasel-l10n-it to italian-desktop, iceweasel-l10n-pa-in
    to punjabi-desktop.

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Jan 2007 18:30:15 -0500

tasksel (2.65) unstable; urgency=low

  * Switch xfce-desktop to use gdm, as xdm is currently not installable from
    within d-i due to #407342.

 -- Joey Hess <joeyh@debian.org>  Wed, 17 Jan 2007 14:28:46 -0500

tasksel (2.64) unstable; urgency=low

  * Correct a bug that caused hidden enhancing tasks to be marked for install
    if they enhanced no available tasks. This is the problem that was
    underlying #406630.
  * Force epiphany into the gnome-desktop. It might not be pulled in via a
    dependency since other web browsers can satisfy the dependency.
    Closes: #370098
  * Also add epiphany-extensions.

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Jan 2007 11:24:38 -0500

tasksel (2.63) unstable; urgency=emergency

  * Switch database-server to use postgres 8.1. (See #406399)
  * Remove foomatic-gui from print-server. Closes: #406616
  * Iceweasel/firefox cannot be in Key for desktop, since they are not
    both available in testing. Closes: #406630

 -- Joey Hess <joeyh@debian.org>  Fri, 12 Jan 2007 17:19:25 -0500

tasksel (2.62) unstable; urgency=high

  [ Per Olofsson ]