@@ -2,7 +2,7 @@ Task: gnome-desktop
 Relevance: 8
 Section: user
 Enhances: desktop
-Provides: complete-desktop
+Test-preferred-desktop: gnome
 Description: Gnome desktop environment
  This task provides basic "desktop" software using the Gnome desktop
  environment.
