@@ -1,0 +1,18 @@
+#!/bin/sh
+# Only one desktop environment should be installed to enhance the desktop
+# task. tasksel/desktop can be preseeded to select which to install.
+set -e
+
+# Avoid starting debconf if not being used to test which enhancing task to
+# install.
+if [ ! "$TESTING_ENHANCER" ]; then
+	exit 1
+fi
+
+. /usr/share/debconf/confmodule
+
+if db_get "tasksel/desktop" && echo "$RET" | grep -q "$2"; then
+	exit 0
+else
+	exit 1
+fi
